--- a/README
+++ b/README
@@ -1,6 +1,7 @@
- Qstit
+Qstit
+--------
 
-contact: subtitles (at) nova-cinema.org
+Contact: subtitles (at) nova-cinema.org
 
 A simple program to project extra subtitles on a dedicated screen or on top of the image.
 
