--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+qstit (2.8.2-1) stable; urgency=low
+
+  * Config path for Linux
+  * Grid and menu style sheets
+  * Jump base → 0.2
+
+ -- Laurent Tenzer <subtitles@nova-cinema.org>  Wed, 17 Apr 2013 13:18:31 +0200
+
 qstit (2.8.1-1) stable; urgency=low
 
   * Initial debian package release
