--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+qstit (2.8.5-1) stable; urgency=low
+
+  * Small style changes
+
+ -- Laurent Tenzer <subtitles@nova-cinema.org>  Sat, 04 May 2013 16:00:18 +0200
+
+qstit (2.8.4-1) stable; urgency=low
+
+  * Styles
+
+ -- Laurent Tenzer <subtitles@nova-cinema.org>  Sat, 04 May 2013 15:59:28 +0200
+
 qstit (2.8.3-1) stable; urgency=low
 
   * help → png
