--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+qstit (2.8.6-1) stable; urgency=low
+
+  * Updated Debian package info
+  * Help file modified
+
+ -- Laurent Tenzer (Qstit) <subtitles@nova-cinema.org>  Mon, 13 May 2013 11:45:40 +0200
+
 qstit (2.8.5-1) stable; urgency=low
 
   * Small style changes
