--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qstit (2.9.1-1) stable; urgency=low
+
+  * Help file modified
+
+ -- Laurent Tenzer (Qstit) <subtitles@nova-cinema.org>  Tue, 09 July 2013 11:39:25 +0200
+
 qstit (2.9.0-1) stable; urgency=low
 
   * Settings system rewritten
